[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/ui/mainMenu/OnlineMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/agane/Agane.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 2 )

[node name="OnlineMenu" type="Control"]
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 700.0
margin_top = 60.0
margin_right = 1220.0
margin_bottom = 1070.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_right = 520.0
margin_bottom = 1010.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_right = 520.0
margin_bottom = 1010.0
size_flags_horizontal = 3
custom_constants/separation = 40
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 271.0
margin_right = 520.0
margin_bottom = 403.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 177.0
margin_right = 343.0
margin_bottom = 132.0

[node name="Port" type="LineEdit" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 166.0
margin_bottom = 58.0
custom_fonts/font = SubResource( 1 )
placeholder_text = "3334"

[node name="Host" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 62.0
margin_right = 166.0
margin_bottom = 132.0
custom_fonts/font = SubResource( 2 )
text = "Host"

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 443.0
margin_right = 520.0
margin_bottom = 575.0

[node name="IP" type="LineEdit" parent="MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer2"]
margin_right = 520.0
margin_bottom = 58.0
custom_fonts/font = SubResource( 1 )
placeholder_text = "127.0.0.1:3334"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer2"]
margin_top = 62.0
margin_right = 520.0
margin_bottom = 132.0
alignment = 1

[node name="Join" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer2/HBoxContainer"]
margin_left = 200.0
margin_right = 320.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 2 )
text = "Join"

[node name="Spacing" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 615.0
margin_right = 520.0
margin_bottom = 629.0

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 669.0
margin_right = 520.0
margin_bottom = 739.0
alignment = 1

[node name="Back" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
margin_left = 189.0
margin_right = 331.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 2 )
text = "Back"
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/Host" to="." method="_on_Host_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer2/HBoxContainer/Join" to="." method="_on_Join_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer2/Back" to="." method="_on_Back_pressed"]
